--- a/search.html
+++ b/search.html
@@ -10,72 +10,38 @@
       font-family: "Segoe UI", Tahoma, sans-serif;
       background: #f6f7f8;
       color: #333;
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
+      display: flex; flex-direction: column; min-height: 100vh;
     }
     header {
-      background: #007ACC;
-      color: #fff;
-      padding: 0 1rem;
-      height: 60px;
-      display: flex;
-      align-items: center;
+      background: #007ACC; color: #fff; padding: 0 1rem; height: 60px;
+      display: flex; align-items: center;
     }
     .logo { font-size: 1.5rem; font-weight: 600; }
     main {
-      flex: 1;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      flex: 1; display: flex; align-items: center; justify-content: center;
       padding: 2rem;
     }
     .result-container {
-      background: #fff;
-      padding: 2rem;
-      border-radius: 6px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      max-width: 500px;
-      width: 100%;
-      text-align: center;
+      background: #fff; padding: 2rem; border-radius: 6px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1); max-width: 500px;
+      width: 100%; text-align: center;
     }
-    .result-container h1 {
-      margin-bottom: 1rem;
-      font-size: 1.5rem;
-      color: #007ACC;
-    }
-    #result-message {
-      margin-bottom: 1.5rem;
-      font-size: 1.125rem;
-    }
+    .result-container h1 { margin-bottom: 1rem; font-size: 1.5rem; color: #007ACC; }
+    #result-message { margin-bottom: 1.5rem; font-size: 1.125rem; }
     #result-message.available { color: #28a745; }
     #result-message.taken    { color: #dc3545;  }
-    .suggestions {
-      margin-top: 1rem;
-      font-size: 0.95rem;
-      color: #555;
-    }
+    .suggestions { margin-top: 1rem; font-size: 0.95rem; color: #555; }
     .suggestions ul { margin-top: 0.5rem; }
     .suggestions li { margin: 0.25rem 0; }
     .btn-back {
-      display: inline-block;
-      margin-top: 1rem;
-      padding: 0.6rem 1.2rem;
-      background: #007ACC;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      text-decoration: none;
-      font-size: 1rem;
+      display: inline-block; margin-top: 1rem; padding: 0.6rem 1.2rem;
+      background: #007ACC; color: #fff; border: none; border-radius: 4px;
+      cursor: pointer; text-decoration: none; font-size: 1rem;
     }
     .btn-back:hover { background: #005fa3; }
     footer {
-      background: #e1e1e1;
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-      color: #555;
+      background: #e1e1e1; text-align: center; padding: 1rem;
+      font-size: 0.9rem; color: #555;
     }
   </style>
 </head>
@@ -97,46 +63,55 @@
     </div>
   </main>
 
-  <footer>
-    © 2025 OSF.NET — All rights reserved.
-  </footer>
+  <footer>© 2025 OSF.NET — All rights reserved.</footer>
 
   <script>
-    // Parse ?domain=... from URL
-    const params = new URLSearchParams(location.search);
-    const name  = (params.get('domain') || '').trim();
-    const out   = document.getElementById('domain-name');
-    const msg   = document.getElementById('result-message');
-    const list  = document.getElementById('suggestion-list');
+    (async () => {
+      // 1. Load the available list
+      let availableList = [];
+      try {
+        const res = await fetch("domains.json");
+        availableList = await res.json();
+      } catch (e) {
+        console.error("Could not load domains.json", e);
+      }
 
-    if (!name) {
-      out.textContent = '—';
-      msg.textContent = 'No domain entered.';
-      msg.classList.add('taken');
-    } else {
-      out.textContent = name;
-      // Dummy availability check: names with even length = available
-      const available = name.length % 2 === 0;
-      if (available) {
-        msg.textContent = `Good news! ${name}.osf is available.`;
-        msg.classList.add('available');
-      } else {
-        msg.textContent = `Sorry, ${name}.osf is already taken.`;
+      // 2. Grab query from URL
+      const params = new URLSearchParams(location.search);
+      const name   = (params.get('domain') || "").trim().toLowerCase();
+      document.getElementById('domain-name').textContent = name || "—";
+
+      const msg = document.getElementById('result-message');
+      const listEl = document.getElementById('suggestion-list');
+
+      // 3. Check availability
+      if (!name) {
+        msg.textContent = "No domain entered.";
         msg.classList.add('taken');
+      } else {
+        const isAvail = availableList.includes(name);
+        if (isAvail) {
+          msg.textContent = `Good news! ${name}.osf is available.`;
+          msg.classList.add('available');
+        } else {
+          msg.textContent = `Sorry, ${name}.osf is already taken.`;
+          msg.classList.add('taken');
+        }
+
+        // 4. Build suggestions from the *same* list, excluding the search term
+        const suggestions = availableList
+          .filter(n => n !== name)
+          .sort(() => 0.5 - Math.random())
+          .slice(0, 3)
+          .map(n => `${n}.osf`);
+
+        suggestions.forEach(s => {
+          const li = document.createElement('li');
+          li.textContent = s;
+          listEl.appendChild(li);
+        });
       }
-      // Generate 3 suggestions
-      const suggestions = [];
-      const suffixes = ['hub', 'zone', 'net', 'site', 'world'];
-      for (let i = 0; i < 3; i++) {
-        const s = name + suffixes[Math.floor(Math.random() * suffixes.length)];
-        suggestions.push(s + '.osf');
-      }
-      suggestions.forEach(s => {
-        const li = document.createElement('li');
-        li.textContent = s;
-        list.appendChild(li);
-      });
-    }
+    })();
   </script>
 
 </body>
