--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="search-container">
       <h1>Find Your .osf Domain</h1>
       <p>Enter your custom name below and grab your <custom>.osf address.</p>
-      <form action="/search" method="get">
+      <form action="/public/search" method="get">
         <input
           type="text"
           name="domain"
