--- a/index.html
+++ b/index.html
@@ -21,14 +21,26 @@
       background: #007ACC;
       color: #fff;
       padding: 0 1rem;
-      height: 60px;
       display: flex;
       align-items: center;
+      height: 60px;
     }
-
     .logo {
       font-size: 1.5rem;
       font-weight: 600;
+    }
+    nav.links {
+      margin-left: auto;
+    }
+    nav.links a {
+      color: #fff;
+      text-decoration: none;
+      font-size: 1rem;
+      margin-left: 1.5rem;
+      transition: opacity 0.2s;
+    }
+    nav.links a:hover {
+      opacity: 0.7;
     }
 
     main {
@@ -81,7 +93,6 @@
       cursor: pointer;
       transition: background 0.2s;
     }
-
     .search-container button:hover {
       background: #005fa3;
     }
@@ -93,33 +104,251 @@
       font-size: 0.9rem;
       color: #555;
     }
+    
+    /* Reset & Base Styles */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      color: #333;
+      background: #f9f9f9;
+    }
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+    ul {
+      list-style: none;
+    }
+
+    /* Header & Navigation */
+    header {
+      background: #004976;
+      color: #fff;
+      padding: 1rem 2rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .logo {
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
+    nav ul {
+      display: flex;
+      gap: 1.5rem;
+    }
+    nav a {
+      color: #fff;
+      transition: opacity 0.2s;
+    }
+    nav a:hover {
+      opacity: 0.7;
+    }
+
+    /* Hero Section */
+    .hero {
+      background: url('hero-bg.jpg') center/cover no-repeat;
+      color: #fff;
+      text-align: center;
+      padding: 4rem 2rem;
+    }
+    .hero h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
+    .hero p {
+      font-size: 1.1rem;
+      margin-bottom: 2rem;
+    }
+    .domain-search {
+      display: inline-block;
+    }
+    .domain-search input {
+      padding: 0.75rem 1rem;
+      font-size: 1rem;
+      width: 300px;
+      max-width: 80%;
+      border: none;
+      border-radius: 4px 0 0 4px;
+    }
+    .domain-search button {
+      padding: 0.75rem 1rem;
+      font-size: 1rem;
+      border: none;
+      background: #ff9f1c;
+      color: #004976;
+      border-radius: 0 4px 4px 0;
+      cursor: pointer;
+      transition: background 0.2s;
+    }
+    .domain-search button:hover {
+      background: #ffbf69;
+    }
+
+    /* Features Section */
+    .features {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 2rem;
+      padding: 3rem 2rem;
+      justify-content: center;
+      background: #fff;
+    }
+    .feature {
+      flex: 1 1 200px;
+      max-width: 300px;
+      background: #f1f1f1;
+      padding: 1.5rem;
+      border-radius: 6px;
+      text-align: center;
+    }
+    .feature h3 {
+      margin-bottom: 0.75rem;
+      color: #004976;
+    }
+
+    /* Pricing Section */
+    .pricing {
+      padding: 3rem 2rem;
+      text-align: center;
+    }
+    .pricing h2 {
+      margin-bottom: 2rem;
+      font-size: 2rem;
+      color: #004976;
+    }
+    table {
+      width: 100%;
+      max-width: 800px;
+      margin: 0 auto;
+      border-collapse: collapse;
+    }
+    th, td {
+      padding: 1rem;
+      border: 1px solid #ddd;
+    }
+    th {
+      background: #004976;
+      color: #fff;
+    }
+    td {
+      background: #fff;
+    }
+
+    /* Contact Section */
+    .contact {
+      background: #fff;
+      padding: 3rem 2rem;
+    }
+    .contact h2 {
+      text-align: center;
+      margin-bottom: 1.5rem;
+      color: #004976;
+    }
+    .contact form {
+      max-width: 600px;
+      margin: 0 auto;
+      display: grid;
+      gap: 1rem;
+    }
+    .contact input,
+    .contact textarea {
+      padding: 0.75rem;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      width: 100%;
+      font-size: 1rem;
+    }
+    .contact button {
+      padding: 0.75rem;
+      border: none;
+      background: #ff9f1c;
+      color: #004976;
+      font-size: 1rem;
+      cursor: pointer;
+      border-radius: 4px;
+      transition: background 0.2s;
+    }
+    .contact button:hover {
+      background: #ffbf69;
+    }
   </style>
 </head>
 <body>
-
   <header>
     <div class="logo">OSF.NET</div>
+    <nav class="links">
+      <a href="https://osf.netlify.app/">Home</a>
+      <a href="https://osf.netlify.app/">Search</a>
+    </nav>
   </header>
-
   <main>
     <div class="search-container">
-      <h1>Find Your .osf Domain</h1>
-      <p>Enter your custom name below and grab your <custom>.osf address.</p>
-      <form action="/public/search" method="get">
-        <input
-          type="text"
-          name="domain"
-          placeholder="yourname"
-          required
-        />
-        <button type="submit">Check .osf</button>
-      </form>
+      <h1>OSF DOMAINS</h1>
+      <p>A domain hosting service.</p>
     </div>
   </main>
-
+ 
+  <section class="features">
+    <div class="feature">
+      <h3>Easy Management</h3>
+      <p>One-click DNS setup, WHOIS privacy, and real-time control panel.</p>
+    </div>
+    <div class="feature">
+      <h3>99.9% Uptime</h3>
+      <p>Our servers are monitored 24/7 for rock-solid performance.</p>
+    </div>
+    <div class="feature">
+      <h3>Free SSL</h3>
+      <p>Automatic HTTPS certificates to keep your site secure.</p>
+    </div>
+    <div class="feature">
+      <h3>24/7 Support</h3>
+      <p>Expert help via chat, email, or phone whenever you need it.</p>
+    </div>
+  </section>
+  <section class="pricing">
+    <h2>Hosting Plans & Pricing</h2>
+    <table>
+      <tr>
+        <th>Plan</th>
+        <th>Price/Year</th>
+        <th>Domains</th>
+        <th>Domain Ending</th>
+      </tr>
+      <tr>
+        <td>Free</td>
+        <td>$0</td>
+        <td>1 Domain</td>
+        <td>.OSF</td>
+      </tr>
+      <tr>
+        <td>Basic</td>
+        <td>$9.99</td>
+        <td>2 Domains</td>
+        <td>.OSF</td>
+      </tr>
+      <tr>
+        <td>Standard</td>
+        <td>$19.99</td>
+        <td>4 Domains</td>
+        <td>.OSF</td>
+      </tr>
+      <tr>
+        <td>Premium</td>
+        <td>$29.99</td>
+        <td>8 Domains</td>
+        <td>.OSF</td>
+      </tr>
+    </table>
+  </section>
   <footer>
     © 2025 OSF.NET — All rights reserved.
   </footer>
-
 </body>
 </html>
