--- a/index.html
+++ b/index.html
@@ -297,20 +297,24 @@
   <section class="features">
     <div class="feature">
       <h3>Easy Management</h3>
-      <p>One-click DNS setup, WHOIS privacy, and real-time control panel.</p>
+      <p>Easy to manage your domain.</p>
     </div>
     <div class="feature">
       <h3>99.9% Uptime</h3>
-      <p>Our servers are monitored 24/7 for rock-solid performance.</p>
+      <p>Your domain is 99.99% sure to be online.</p>
     </div>
     <div class="feature">
-      <h3>Free SSL</h3>
-      <p>Automatic HTTPS certificates to keep your site secure.</p>
+      <h3>Free Hosing</h3>
+      <p>Host your domain for free!</p>
     </div>
     <div class="feature">
-      <h3>24/7 Support</h3>
-      <p>Expert help via chat, email, or phone whenever you need it.</p>
+      <h3>Support</h3>
+      <p>Expert help via chat or email whenever you need it.</p>
     </div>
+    <div class="feature">
+      <h3>Paid Hosting</h3>
+      <p>Paid hosting gives you premium features and priority hosting.</p>
+  </div>
   </section>
   <section class="pricing">
     <h2>Hosting Plans & Pricing</h2>
@@ -341,12 +345,18 @@
       </tr>
       <tr>
         <td>Premium</td>
-        <td>$29.99</td>
+        <td>29.99</td>
         <td>8 Domains</td>
         <td>.OSF</td>
       </tr>
     </table>
   </section>
+  <section class="contact">
+  <h2>Get in Touch</h2>
+    <form>
+      <button href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&to=tsscomputer1@gmail.com">Email</button>
+    </form>
+</section>
   <footer>
     © 2025 OSF.NET — All rights reserved.
   </footer>
