--- a/users/free/rfg/index.html
+++ b/users/free/rfg/index.html
@@ -7,10 +7,11 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <div class="background"></div>
   <div class="container">
-    <h1>Random Fact Generator</h1>
-    <p id="fact">Click the button to get a random fact!</p>
-    <button onclick="generateFact()">Generate Fact</button>
+    <h1>🌟 Random Fact Generator</h1>
+    <p id="fact">Click the button to discover something wild!</p>
+    <button onclick="generateFact()">🎲 Generate Fact</button>
   </div>
   <script src="script.js"></script>
 </body>
